refactor: cursor